# Web-Data

./: README.md  VGiannaccini (1).ipynb  VGiannaccini.ipynb  pyproject.toml
src/web-data/: __init__.py  api_handler.py  web_data  web_scraper.py  xml_parser.py
