[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "web-data"
authors = [
    {name = "Vinicius Giannaccini", email = "giannaccini@hotmail.com"},
]
maintainers = [
    {name = "Vinicius Giannaccini"},
]
description = "Online scraping, API interaction, and XML parsing."
readme = "README.md"
keywords = ["python", "scraping", "API", "parsing" ]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11.6"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "seaborn>=0.13.0",
    "pandas>=2.1.1",
    "wordCloud>=1.9.2",
    "matplotlib>=3.8.0",
]
